--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     <header>
         <div class="container header-content">
             <div class="logo">
-                <img src="C:\Users\THABI\Downloads\pngtree-sun-icon-logo-png-png-image_5687131.png" alt="Solar Logo" class="logo-image">
+                <img src="https://thumbs.dreamstime.com/b/sun-logo-22154493.jpg" alt="Solar Logo" class="logo-image">
                 <h1>Solar Stays on Wheels</h1>
             </div>
             <nav>
@@ -409,4 +409,5 @@
     </footer>
 </body>
 </html>
+
 
