--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     <header>
         <div class="container header-content">
             <div class="logo">
-                <img src="https://thumbs.dreamstime.com/b/sun-logo-22154493.jpg" alt="Solar Logo" class="logo-image">
+                <img src="images/logo.png" alt="Solar Logo" class="logo-image">
                 <h1>Solar Stays on Wheels</h1>
             </div>
             <nav>
@@ -352,7 +352,7 @@
             </div>
             <div class="hero-image">
                 <!-- Replace this URL with your actual real image of Warona Nkokone (upload to your server or use a hosting service like Imgur) -->
-                <img src="file:///C:/Users/THABI/Downloads/WhatsApp%20Image%202025-09-23%20at%2022.43.00_5067b2bb.jpg" alt="Warona Nkokone, owner of Solar Stays on Wheels">
+                <img src="images/waronaCEO.png" alt="Warona Nkokone, owner of Solar Stays on Wheels">
             </div>
         </div>
     </section>
@@ -409,5 +409,6 @@
     </footer>
 </body>
 </html>
+
 
 
