--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
             </div>
             <div class="hero-image">
                 <!-- Replace this URL with your actual real image of Warona Nkokone (upload to your server or use a hosting service like Imgur) -->
-                <img src="https://github.com/ThabisoKEITIILE/Solar-on-wheels-/blob/main/images/waronaCEO.jpg" alt="Warona Nkokone, owner of Solar Stays on Wheels">
+                <img src="images/waronaCEO.png" alt="Warona Nkokone, owner of Solar Stays on Wheels">
             </div>
         </div>
     </section>
@@ -409,6 +409,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
