Fix HTML structure and enhance footer design

--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
             </div>
             <div class="hero-image">
                 <!-- Replace this URL with your actual real image of Warona Nkokone (upload to your server or use a hosting service like Imgur) -->
-                <img src="images/waronaCEO.png" alt="Warona Nkokone, owner of Solar Stays on Wheels">
+                <img src="images/waronaCEO.jpg" alt="Warona Nkokone, owner of Solar Stays on Wheels">
             </div>
         </div>
     </section>
@@ -376,7 +376,7 @@
                 </div>
                 <div class="feature-card">
                     <!-- Real image for sustainability (from Unsplash - replace with your own) -->
-                    <img src="iamges/nicehotel.png" alt="Eco-Friendly" class="feature-image">
+                    <img src="https://media.istockphoto.com/id/1502289160/photo/global-sustainable-environment-concept-esg-net-zero-eco-co2-carbon-human-hand-holding-green.jpg?s=612x612&w=0&k=20&c=Q9F-Q7dDBOrNj5Cd9jjjw-0ioRSJBTM4YacK9xctFP8=" alt="Eco-Friendly" class="feature-image">
                     <h3>Sustainable Luxury</h3>
                     <p>Enjoy eco-friendly amenities and comfortable accommodations while respecting the environment.</p>
                 </div>
@@ -409,6 +409,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
