Fix HTML structure and enhance footer design

--- a/index.html
+++ b/index.html
@@ -326,7 +326,7 @@
     <header>
         <div class="container header-content">
             <div class="logo">
-                <img src="images/logo.jpg" alt="Solar Logo" class="logo-image">
+                <img src="https://png.pngtree.com/png-vector/20220705/ourmid/pngtree-sun-icon-logo-png-png-image_5687131.png" alt="Solar Logo" class="logo-image">
                 <h1>Solar Stays on Wheels</h1>
             </div>
             <nav>
@@ -409,6 +409,7 @@
     </footer>
 </body>
 </html>
+
 
 
 
