Update image sources and enhance styling in About Us

--- a/aboutus.html
+++ b/aboutus.html
@@ -420,7 +420,7 @@
     <header>
         <div class="container header-content">
             <div class="logo">
-                <img src="C:\Users\THABI\Downloads\pngtree-sun-icon-logo-png-png-image_5687131.png" alt="Solar panel logo icon" class="logo-image">
+                <img src="https://png.pngtree.com/png-vector/20220705/ourmid/pngtree-sun-icon-logo-png-png-image_5687131.png" alt="Solar panel logo icon" class="logo-image">
                 <h1>Solar Stays on Wheels</h1>
             </div>
             <nav>
@@ -465,13 +465,13 @@
             <h2 class="section-title">Meet Our Team</h2>
             <div class="team-grid">
                 <div class="team-member">
-                    <img src="C:\Users\THABI\Downloads\WhatsApp Image 2025-09-23 at 22.43.00_4b271843.jpg" alt="Warona Nkokone">
+                    <img src="images/waronaCEO.jpg" alt="Warona Nkokone">
                     <h3>Warona Nkokone</h3>
                     <p class="role">Owner & Founder</p>
                     <p>Passionate about sustainable tourism, Warona leads the vision for eco-luxury on wheels, ensuring every journey supports local communities and the environment.</p>
                 </div>
                 <div class="team-member">
-                    <img src="C:\Users\THABI\Downloads\WhatsApp Image 2025-09-23 at 23.35.46_cf5762ea.jpg" alt="Thabiso Elias Keitiile">
+                    <img src="images/sakhiHE.jpg" alt="Thabiso Elias Keitiile">
                     <h3>Thabiso Elias Keitiile</h3>
                     <p class="role">Head Engineer</p>
                     <p>Expert in renewable energy systems, Thabiso designs and maintains our solar-powered bus, ensuring efficient, zero-emission operations for seamless adventures.</p>
@@ -535,5 +535,6 @@
                     </ul>
                     <a href="booking.html" class="btn">Book Now</a>
                 </div>
+
 
               
