Revise About Us page content and layout
Updated the About Us page with new content and styles, including team members, mission statement, and exclusive packages.

--- a/aboutus.html
+++ b/aboutus.html
@@ -453,7 +453,7 @@
                     <p>Our journey began with a vision to combine mobility, luxury, and sustainability. By converting a bus into a solar-powered hotel, we offer travelers the freedom to explore stunning landscapes while minimizing their environmental footprint.</p>
                 </div>
                 <div class="story-image">
-                    <img src="C:\Users\THABI\Downloads\516247400.jpg" alt="Solar bus hotel in Botswana landscape">
+                    <img src="https://www.americanexpress.com/en-us/travel/discover/photos/20204/11062/530/1globalview.jpg?ch=310" alt="Solar bus hotel in Botswana landscape">
                 </div>
             </div>
         </div>
@@ -521,8 +521,8 @@
                 <!-- Two Nights Package -->
                 <div class="package-card">
                     <h3 class="package-title">
-                        Two Nights Package
-                        <span class="package-price">P10,000 per couple</span>
+                Seven Nights Package
+                        <span class="package-price">P50,000 per couple</span>
                     </h3>
                     <ul class="package-features">
                         <li>Pick and drop transport</li>
@@ -538,3 +538,4 @@
 
 
               
+
