--- a/booking.html
+++ b/booking.html
@@ -414,7 +414,7 @@
         <div class="container header-content">
             <div class="logo">
                
-                <img src="C:\Users\THABI\Downloads\pngtree-sun-icon-logo-png-png-image_5687131.png" alt="Solar panel logo icon" class="logo-image">
+                <img src="https://png.pngtree.com/png-vector/20220705/ourmid/pngtree-sun-icon-logo-png-png-image_5687131.png" alt="Solar panel logo icon" class="logo-image">
                 <h1>Solar Stays on Wheels</h1>
             </div>
             <nav>
@@ -525,3 +525,4 @@
                         <label for="email">Email Address</label>
 
                         <input type="email" id="email
+
