--- a/our bus hotel.html
+++ b/our bus hotel.html
@@ -339,7 +339,7 @@
         <div class="container header-content">
             <div class="logo">
                 <!-- Note: Replaced with a real stock image URL for a sun/solar icon logo. Upload your custom logo to a hosting service (e.g., ImgBB, Cloudinary) and replace this URL for production. -->
-                <img src="C:\Users\THABI\Downloads\pngtree-sun-icon-logo-png-png-image_5687131.png" alt="Solar panel logo icon" class="logo-image">
+                <img src="https://png.pngtree.com/png-vector/20220705/ourmid/pngtree-sun-icon-logo-png-png-image_5687131.png" alt="Solar panel logo icon" class="logo-image">
                 <h1>Solar Stays on Wheels</h1>
             </div>
             <nav>
@@ -450,3 +450,4 @@
     </footer>
 </body>
 </html>
+
