Fix HTML encoding issues in contact.html

--- a/contact.html
+++ b/contact.html
@@ -378,7 +378,7 @@
         <div class="container header-content">
             <div class="logo">
                 <!-- Note: Using real stock image URL for solar/sun icon logo. Replace with your hosted custom logo. -->
-                <img src="C:\Users\THABI\Downloads\pngtree-sun-icon-logo-png-png-image_5687131.png" alt="Solar panel logo icon" class="logo-image">
+                <img src="https://png.pngtree.com/png-vector/20220705/ourmid/pngtree-sun-icon-logo-png-png-image_5687131.png" alt="Solar panel logo icon" class="logo-image">
                 <h1>Solar Stays on Wheels</h1>
             </div>
             <nav>
@@ -514,3 +514,4 @@
     </footer>
 </body>
 </html>
+
